[package]
edition = "2021"
name = "aoc2022"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0"
clap = {version = "4.0.29", features = ["derive"]}

[dev-dependencies]
rstest = "0.16.0"
